# JTestGen

./: .gitignore  DEMO.md  README.md  TESTGEN_RULES.example.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  coverage_audit_request.md  feature_request.md
.github/examples/: jtestgen-audit.yml
.github/workflows/: ci.yml
benchmarks/demo-legacy-repo/: TESTGEN_RULES.md  pom.xml
benchmarks/demo-legacy-repo/src/main/java/com/acme/billing/: CustomerType.java  InvoiceCalculator.java  InvoiceSummary.java  LineItem.java
benchmarks/mockito-heavy-service/: TESTGEN_RULES.md  pom.xml
benchmarks/spring-boot-service/: TESTGEN_RULES.md  pom.xml
docs/: ARCHITECTURE.md  BENCHMARKS.md  COVERAGE_AUDIT_OFFER.md  DEMO_SCRIPT.md  ENTERPRISE_ROADMAP.md  GITHUB_ACTIONS.md  MVP_SCOPE.md  OUTREACH.md  POSITIONING.md  SAFETY_AND_LIMITS.md  STRATEGY.md
docs/examples/: benchmark-template.json  commons-cli-report.json  demo-legacy-report.json  jackson-core-report.json  mockito-heavy-service-report.json  spring-boot-service-report.json
evals/: run_eval.py
evals/fixtures/: tiny-maven-project-repair-responses.json  tiny-maven-project-responses.json
evals/fixtures/tiny-maven-project/: pom.xml
scripts/: run_jackson_demo.ps1
src/javatestgen/: __init__.py  cli.py  config.py  context.py  coverage.py  generator.py  java_source.py  prompting.py  reporting.py  runner.py  targeting.py  workflow.py
tests/: test_cli.py  test_context.py  test_coverage.py  test_java_source.py  test_prompting.py  test_reporting.py  test_runner.py  test_targeting.py  test_workflow_helpers.py
(+20 files in other folders)
